refactor: new capability